<?xml version="1.0"?>
<package>
  <name>gear_a_b_mbed</name>
  <version>0.1.0</version>
  <description>Gear, Accel, Brake control's mbed client</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/tado-aev/gear_a_b_mbed</url>

  <author email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_mbed</build_depend>
  <build_depend>coms_msgs</build_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>rosserial_mbed</run_depend>
  <run_depend>coms_msgs</run_depend>
</package>
